--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 Flask
-Flask-SQLAlchemy
 Flask-Login
-Werkzeug
-requests
+Flask-SQLAlchemy
 SQLAlchemy
+requests
 gunicorn
-psycopg2-binary
+psycopg2-binary==2.9.9
